Aufräumen mit classes

--- a/css/main.css
+++ b/css/main.css
@@ -4,21 +4,16 @@ body {
 #gallery img{
   margin-top:30px;
   margin-bottom:30px;
+  img-responsive;
 }
-
+.seperation-border{
+  border-bottom:10px;
+  margin-top:30px;
+}
 .textstyle {
     font-size: 30px;
     margin: auto;
 }
-
-.line {
-    display: flex;
-    flex-direction: row;
-    min-height: 10px;
-    min-width: 50px;
-    background-color: #1e1e1e;
-}
-
 .linkbase {
     display:flex;
     flex-direction:row;
