--- a/css/main.css
+++ b/css/main.css
@@ -4,15 +4,13 @@ body {
 #gallery img{
   margin-top:30px;
   margin-bottom:30px;
+}
+img {
   img-responsive;
 }
 .seperation-border{
   border-bottom:10px;
   margin-top:30px;
-}
-.textstyle {
-    font-size: 30px;
-    margin: auto;
 }
 .linkbase {
     display:flex;
@@ -43,7 +41,9 @@ body {
     font-style:italic;
     color:#069;
 }
-
+.footer div{
+  font-size:30px;
+}
 .head {
     padding-top: 140px;
 }
@@ -60,22 +60,11 @@ body {
     width:100px;
 }
 
-.block {
-    width:30px;
-}
-
 a {
     display:block;
     color:#FFF;
     text-align:center;
 }
-
-a:active {
-    display:block;
-    background-color:#f2f2f2;
-    color:#069;
-}
-
 a:hover {
     font-size:20px;
     color:#FFF;
