--- a/css/main.css
+++ b/css/main.css
@@ -35,8 +35,6 @@ body {
     justify-content:space-around;
     align-items:center;
     background-color:#f2f2f2;
-    font-size:100px;
-    font-style:italic;
     color:#069;
   }
 .footer p{
@@ -44,6 +42,9 @@ body {
   }
 .header {
     padding-top: 140px;
+    font-size:150px;
+    font-style:italic;;
+    
   }
 .size {
     width:1600px;
