--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
     background-color:#069;
-    
+
 }
 .gallery-img {
   display: block;
@@ -24,6 +24,7 @@ body {
     background-color:#003250;
     position:fixed;
     margin:auto;
+    font-size:20px;
 }
 .link-base a {
     margin: 0 10px;
