--- a/css/main.css
+++ b/css/main.css
@@ -24,10 +24,13 @@ body {
     background-color:#003250;
     position:fixed;
     margin:auto;
-    font-size:20px;
 }
 .link-base a {
     margin: 0 10px;
+    font-size:20px;
+}
+#contact-field>a{
+    font-size:10px;
 }
 .header, .footer {
     display:flex;
