--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,9 @@ body {
   border-bottom:10px solid rgb(30,30,30);
   margin-top:30px;
 }
+.ul-no-style{
+  list-style-type: none;
+}
 .link-base {
     display:flex;
     flex-direction:row;
