--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ body {
     position:fixed;
     margin:auto;
 }
-.link-base>a {
+.link-base>li>a {
     margin: 0 10px;
     font-size:15px;
     color:#FFF;
