--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
  display: block;
  max-width: 100%;
  height: auto;
- margin: 30px 200px;
+ margin: 30px auto 30px auto;
 }
 .seperation-border{
  border-bottom:10px solid rgb(30,30,30);
